added Performance entity
